updated relative paths of static content for the website

--- a/website/homepage.html
+++ b/website/homepage.html
@@ -7,7 +7,7 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 
 
-    <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="../website/static/css/main.css"/>
 
     <!--[if lt IE9]
     <script src="//github.com/aFarkas/html5shiv/blob/master/dist/html5shiv.js"></script>
@@ -19,7 +19,7 @@
 
 
 <body class="cf">
-<header><img src="static/imgs/logo-vertical.png"/></header>
+<header><img src="../website/static/imgs/logo-vertical.png"/></header>
 <section>
     <aside>
         <div id="cur-time-pace">
