--- a/website/homepage.html
+++ b/website/homepage.html
@@ -161,6 +161,8 @@
     </aside>
 
 </section>
+<a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
+
 
 <!-- For the sake of the demonstration current timestamp will be determined by us -->
 <script>
