added license details, and included download links from the webpage

--- a/website/homepage.html
+++ b/website/homepage.html
@@ -25,7 +25,7 @@
         <div id="cur-time-pace">
             Time is moving at <input type="text" id="seconds-per-second" value="1"> seconds<br>per<br>earth second
         </div>
-        <div style="margin: 20px 0">
+        <div>
             You visited this page:
             <div class="visited-timestamp"></div>   <br>
             The date:
@@ -33,8 +33,21 @@
         </div>
 
         <div>
-            oneminute.js is JavaScript library which converts
+            oneminute.js is an open source JavaScript library which converts
             integer timestamps to meaningful text conveying time differences, and/or optionally dates.
+        </div>
+
+        <div>
+            The <a href="//github.com/relfor/oneminute">source</a> is available on GitHub, and is <a href="http://www.linfo.org/bsdlicense.html">BSD licensed.</a>
+        </div>
+        <div>
+            Download
+            <a href="http://oneminute.relfor.co/oneminute.js" class="download-button">
+                Developer's Version (Unminified)
+            </a>
+            <a href="http://oneminute.relfor.co/oneminute.min.js" class="download-button">
+                Production Version (Minified)
+            </a>
         </div>
 
     </aside>
