--- a/webpage/homepage.html
+++ b/webpage/homepage.html
@@ -2,6 +2,8 @@
 <html dir="ltr" lang="en">
 <head>
     <title>onminute - JavaScript for Time Differences and Dates</title>
+<meta charset="utf-8"/>
+<meta name="google-site-verification" content="jlWM8fgFiAxmrDT689LBDza0sUG8fVwjJovzE5jZ-RU" />
     <meta name="keywords" content="javascript, time difference, dates, timestamp, js"/>
     <meta name="description" content="a javascript library for in displaying time differences and dates on html pages"/>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
