fix links for a dead project

--- a/webpage/homepage.html
+++ b/webpage/homepage.html
@@ -6,7 +6,7 @@
 <meta name="google-site-verification" content="jlWM8fgFiAxmrDT689LBDza0sUG8fVwjJovzE5jZ-RU" />
     <meta name="keywords" content="javascript, time difference, dates, timestamp, js"/>
     <meta name="description" content="a javascript library for in displaying time differences and dates on html pages"/>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 
 
     <link rel="stylesheet" type="text/css" href="../webpage/static/css/main.css"/>
@@ -40,14 +40,14 @@
         </div>
 
         <div>
-            The <a href="//github.com/relfor/oneminute">source</a> is available on GitHub, and is <a href="http://www.linfo.org/bsdlicense.html">BSD licensed.</a>
+            The <a href="//github.com/rajnathani/oneminute">source</a> is available on GitHub, and is <a href="http://www.linfo.org/bsdlicense.html">BSD licensed.</a>
         </div>
         <div>
             Download
-            <a href="http://oneminute.relfor.co/oneminute.js" class="download-button">
+            <a href="https://oneminute.rajnathani.com/oneminute.js" class="download-button">
                 Developer's Version (Unminified)
             </a>
-            <a href="http://oneminute.relfor.co/oneminute.min.js" class="download-button">
+            <a href="https://oneminute.rajnathani.com/oneminute.min.js" class="download-button">
                 Production Version (Minified)
             </a>
         </div>
@@ -176,7 +176,7 @@
     </aside>
 
 </section>
-<a href="https://github.com/relfor/oneminute"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
+<a href="https://github.com/rajnathani/oneminute"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
 
 
 <!-- For the sake of the demonstration current timestamp will be determined by us -->
